[tool.poetry]
name = "py-quantaq"
version = "0.4.0-alpha.2"
description = "API wrapper and utils for QuantAQ, Inc."
authors = ["David H Hagan <david.hagan@quant-aq.com>"]
license = "Apache License 2.0"
readme = "README.md"
homepage = ""
repository = "https://github.com/quant-aq/py-quantaq"
documentation = "https://quant-aq.github.io/py-quantaq"
keywords = []
classifiers = []
packages = [
    { include = "quantaq", from='.' }
]

[tool.poetry.dependencies]
python = "^3.6.1"
requests = "^2.24.0"
pandas = "^1.0.5"
setuptools = "^47.3.1"
getversion = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-coverage = "^0.0"
sphinx = "^3.1.1"
toml = "^0.10.1"
responses = "^0.10.15"
sphinx-rtd-theme = "^0.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
