[tool.poetry]
name = "py-quantaq"
version = "1.2.0a1"
description = "API wrapper and utils for QuantAQ, Inc."
authors = ["David H Hagan <david.hagan@quant-aq.com>"]
license = "Apache License 2.0"
readme = "README.md"
homepage = ""
repository = "https://github.com/quant-aq/py-quantaq"
documentation = "https://quant-aq.github.io/py-quantaq"
keywords = []
classifiers = []
packages = [
    { include = "quantaq", from='.' }
]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
requests = "^2.24"
pandas = ">=1.0"
setuptools = ">=47.0, <70.0"
urllib3 = ">=1.26.5"
numpy = ">=1.22"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pytest-coverage = "^0.0"
sphinx = "^3.1.1"
toml = "^0.10.1"
responses = "^0.10.15"
sphinx-rtd-theme = "^0.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
